- BarChart component: Added fully RWD to and local storage to avoid feching data everytime - Navbar component: Merged DroipdownMenu and NavButton back into main component, cause overatomization resulted in poor readability - Renamed variables in all component to make it more self-explaning

--- a/Sandbox/src/main.css
+++ b/Sandbox/src/main.css
@@ -54,7 +54,7 @@ body {
   }
   .container {
     width: min-content; 
-    height: min-content;
+    
   }
   .content{
     margin: 10px 0px ;
